[package]
name = "stack-bitset"
version = "0.2.5"
authors = ["Constantin Gierczak--Galle <constantin.gierczak-galle@ens.fr>"]
edition = "2018"
repository = "https://github.com/Sup3Legacy/stack-bitset"
keywords = ["bitset", "stack-allocated"]
description = "Stack-allocated generic-sized bitset implementation. WIP"
license = "MIT"

[dependencies]
